# Scheduling-Algorithms

./: CMakeLists.txt  README.md  calculations.cpp  calculations.h  main.cpp  priority.cpp  priority.h  readFiles.cpp  readFiles.h  roundRobin.cpp  roundRobin.h  testData.txt
